# shiritori-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Protocol.md  README.md  client.py  main.cpp  vcpkg.json
controller/: CMakeLists.txt  games_controller.cpp  info_controller.cpp  session_manager.cpp  task_queue.cpp
controller/include/: games_controller.hpp  info_controller.hpp  task_queue.hpp
controller/interfaces/: igames_controller.cpp  igames_controller.hpp  iinfo_controller.cpp  iinfo_controller.hpp  itask_queue.cpp  itask_queue.hpp
data/: shiritoriDb.db
game/: CMakeLists.txt
network/: CMakeLists.txt  router.cpp  server.cpp  session.cpp
network/include/: router.hpp  server.hpp  session.hpp
repo/: CMakeLists.txt  games_repo.cpp  users_repo.cpp
repo/dicts/: jisho.cpp
repo/include/: dictionary.hpp  game.hpp  games_repo.hpp  idictionary.hpp  jisho.hpp  user.hpp  users_repo.hpp  word.hpp
repo/interfaces/: idictionary.cpp  idictionary.hpp  igames_repo.cpp  igames_repo.hpp  iusers_repo.cpp  iusers_repo.hpp
repo/models/: game.cpp  user.cpp
service/: CMakeLists.txt  game_context.cpp  game_fabric.cpp  game_session.cpp  info_service.cpp  mapper.cpp  player_score.cpp  session_manager.cpp
service/dto/: game_info.cpp  user_info.cpp  word_info.cpp
service/include/: game_context.hpp  game_fabric.hpp  game_info.hpp  game_session.hpp  game_update_event.hpp  handle_word_status.hpp  info_service.hpp  mapper.hpp  session_manager.hpp  user_info.hpp  word_info.hpp
service/interfaces/: igame_fabric.cpp  igame_fabric.hpp  igame_session.cpp  igame_session.hpp  iinfo_service.cpp  iinfo_service.hpp
tests/: CMakeLists.txt  controller_test.cpp  full_server_test.cpp  network_test.cpp  sanity_test.cpp  service_test.cpp
